--- a/css/ntreliability.css
+++ b/css/ntreliability.css
@@ -189,13 +189,14 @@ footer {
     
     section {
         width: 100vw;
-        padding-top: 27vh;
+        padding-top: 29vh;
         padding-left: 1.5vw;
         padding-right: 1.5vw;
     }
 
     .overlay {
         opacity: 1;
+        font-size: clamp(7px, 1.5vh, 60px);
     }
 
     
@@ -292,35 +293,6 @@ footer {
     
     .image-container {
         position: relative;
-    }
-    
-    .image-container:hover .overlay {
-        opacity: 1; /* Show overlay on hover */
-    }
-    
-    .overlay {
-        z-index: 1000000;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-        color: white;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        font-weight: bold;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        justify-content: center;
-        align-items: center;
-        opacity: 0; /* Initially hidden */
-        transition: opacity 0.3s ease; /* Smooth transition effect */
-        font-size: clamp(7px, 1.5vh, 60px);
-    }
-    
-    .overlay-link {
-        display: block;
-        width: 100%;
-        height: 100%;
     }
     
     #topper {
