--- a/css/risen.css
+++ b/css/risen.css
@@ -419,7 +419,7 @@ cite {
         font-size: clamp(9px, 2vh, 36px);
         text-align: center;
         overflow-y: auto;
-        max-height: 60vh;
+        max-height: 55vh;
     }
 
     .interactions h2 {
@@ -486,11 +486,14 @@ cite {
         font-size: clamp(9px, 2vh, 36px);
         text-align: center;
         overflow-y: auto;
-        max-height: 55vh;
+        max-height: 48vh;
     }
 
     .close {
-        padding-top: 21vh;
+        padding-top: 27vh;
     }
 
+    section {
+        padding-top: 30vh;
+    }
 }
